# RMDS_COVID19_riskgenerator

./:  requirements.txt  .Rhistory  .gitignore  .python-version  Evaluation.md  README.md  functions.Rout  main.sh  pyproject.toml  test.sh
R/: functions.R
data/internal/: RMDS_zipcode_mapper.json
data/processed/: LA_County_Covid19_CSA_case_death_table.csv  LA_County_Covid19_CSA_testing_table.csv  RMDS_poi.csv
data/raw/: lacounty_covid.json  postal.csv
data/result/: risk_community-2020-08-12.csv  risk_community-2020-08-13.csv  risk_community-2020-08-14.csv
data/risk_history/: risk_community-2020-08-03.csv  risk_community-2020-08-15.csv  risk_community-2020-08-16.csv  risk_community-2020-08-17.csv  risk_community-2020-08-18.csv  risk_community-2020-08-19.csv  risk_community-2020-08-20.csv  risk_community-2020-08-21.csv  risk_community-2020-08-24.csv  risk_community-2020-08-29.csv  risk_community-2020-08-30.csv  risk_community-2020-09-04.csv  risk_community-2020-09-09.csv  risk_community-2020-09-10.csv  risk_community-2020-09-11.csv  risk_community-2020-09-12.csv  risk_community-2020-09-13.csv  risk_community-2020-09-17.csv  risk_community-2020-09-19.csv  risk_community-2020-09-21.csv  risk_community-2020-09-24.csv  risk_community-2020-09-25.csv  risk_community-2020-09-26.csv  risk_community-2020-09-27.csv  risk_community-2020-09-30.csv  risk_community-2020-10-01.csv  risk_community-2020-10-02.csv  risk_community-2020-10-04.csv  risk_community-2020-10-05.csv  risk_community-2020-10-06.csv  risk_community-2020-10-07.csv  (+1 more)
python/: poi.py
tests/: unit_test.py
(+36 files in other folders)
