[tool.poetry]
name = "risk_score_generator"
version = "0.1.0"
description = "The project is an extension and computation optimized version of team RPI who participate the 2020 COVID-19 challenge held by RMDS Lab. The orignal project was reviewed by a panel of judges from the City of LA, LA County Department of Public Health, Chamber of Commerce, and academia."
authors = ["Yen-Chen Chou <https://github.com/yenchenchou>", 
           "MelodieYuxiuHe <https://github.com/MelodieYuxiuHe>",
           "YingYu <https://github.com/YC-1412>",
           "Wei-Fan Chen <https://github.com/weifanchen>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"
pandas = "^0.23.0"
requests = "^2.20"

[tool.poetry.dev-dependencies]
black = "==19.3b0"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
